# Compilers_Theory

./: .clangd  .gitignore  README.md  requirements.txt  setup.sh
src/: test.ll
src/Book/: macro.c
src/DOT/: DotExpr.g4  DotExprBaseVisitor.java  DotExprVisitor.java  ListAdj.java  SymbolTable.java  Visitor.java  adjacency_list.txt  inpu.gv  inpu.txt  output.txt  test.java
src/Grammar/: ArrayInit.g4  ShortToUnicodeString.java  Test.java  Translate.java
src/Notes/: week1-struct.excalidraw  week1.excalidraw  week2.excalidraw  week2_3-ScanerAndParser.excalidraw
src/PC/01/: ExprLexer.g4  ExprParser.g4  PC1.c  PC1_Luis Felipe Poma AStete.docx
src/PC/R/: .clangd  CMakeLists.txt  main.cpp  pcdos.g4  pcdosVisitorImpl.cpp  pcdosVisitorImpl.h  sample.k
src/Parser/: calc.y  calclexer.c
src/Parser/antlr/: Expr.g4  ambiguity.c  expr2.g4
src/Parser/bison/: calc.tab.c  calc.y  calclexer.c
src/ScanLexer/: a.out  lexer1.c  lexer3.l  test.c
src/Scaner/: lexer1.c  lexer2.l  lexer3.l  test.c
src/TP/Pregunta3/: input.txt
src/TP/Pregunta4/: Expr.g4
src/TP/Pregunta9/: lexer.l
src/Theory/Book/: macro.c
src/Theory/Notes/: week1-struct.excalidraw
src/Theory/Scaner/: lexer1.c  test.c
src/Theory/week07-antlr/LabelExprCpp/: CMakeLists.txt  main.cpp
src/Theory/week07/LabelExprCpp/: .clangd  CMakeLists.txt  EvalVisitorImpl.h  LabeledExpr.g4  main.cpp
src/week07/: LabeledExpr.g4  LabeledExprBaseVisitor.java  LabeledExprVisitor.java
src/week12-toyIR/: sample.cpp
src/week14-refactor-toy/: CMakeLists.txt  main.cpp  mainllvm.h  out.ll  sample.k
(+67 files in other folders)
